# droidsfmin

./: DroidSignatureFileFilter.hs  LICENSE  README.md  droidsfmin.cabal  shrinkDroidSF.hs
benchmark/: Makefile  README.md
benchmark/data/: dummy.html  dummy.txt  dummy.xml
benchmark/util/: benchmark.pl  download.sh  filter.sh
src/: DroidSignatureFileFilter.hs  Main.hs
