name:                droidsfmin
version:             1.0.0
synopsis:            Filter DROID signature file based on a list of PUIDs.
description:         Use droidsfmin to analyze and filter the contents of a
                     DROID signature file. Minimize it based on a list of
                     PUIDs, remove all format entries you don't need and speed
                     up the file format identification process.
homepage:            http://martin.hoppenheit.info/code/droidsfmin
license:             BSD3
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable droidsfmin
  main-is:             Main.hs
  other-modules:       DroidSignatureFileFilter
  -- other-extensions:    
  build-depends:       base, xml
  hs-source-dirs:      src
  default-language:    Haskell2010
